[package]
name = "aont"
version = "0.1.0"
edition = "2018"
description = "All-Or-Nothing-Transform"
homepage = "https://github.com/declanmalone/aont"
categories = ["mathematics", "algorithms" ]
keywords = ["crypto", "algorithms"]
license = "GPL-2.0-or-later OR LGPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

digest = "0.9.0"
sha-1 = "0.9.6"

rand = "0.8.4"
